Añadiendo una nueva section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         </div>
     </header>
 
+    <section>
+        <h3>Adding a new section</h3>
+    </section>
+
 
     <section id="Acerca-de-mi" class="container text-center my-5">
 
